--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "react-dom": "^16.8.1",
     "react-scripts": "2.1.5"
   },
+  "devDependencies": {
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react-hooks": "^1.0.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -17,9 +22,7 @@
     "extends": "react-app"
   },
   "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
+    "last 2 chrome versions",
+    "last 2 firefox versions"
   ]
 }
