--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
     "import/no-extraneous-dependencies": 0,
     "no-confusing-arrow": 0,
     "no-class-assign": 0,
+    "no-use-before-define": ["error", { "variables": false }],
     "no-multi-spaces": [2, { "exceptions": { "ObjectExpression": true } }],
     "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
     "max-len": ["error", 140],
