--- a/.eslintrc
+++ b/.eslintrc
@@ -19,12 +19,16 @@
     "linebreak-style": ["error", "windows"],
     "no-unused-expressions": ["error", { "allowShortCircuit": true }],
 
-    "jsx-a11y/anchor-is-valid": 2,
     "jsx-a11y/no-noninteractive-element-interactions": "off",
     "jsx-a11y/click-events-have-key-events": "off",
     "jsx-a11y/no-static-element-interactions": "off",
     "jsx-a11y/mouse-events-have-key-events": "off",
     "jsx-a11y/media-has-caption": "off",
+    "jsx-a11y/anchor-is-valid": [ "error", {
+      "components": [ "Link" ],
+      "specialLink": [ "to", "hrefLeft", "hrefRight" ],
+      "aspects": [ "noHref", "invalidHref", "preferButton" ]
+    }],
     "react/prop-types": "off",
     "react-hooks/rules-of-hooks": "error"
   },
