Moved hosting to GitHub pages.

--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "wattos",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://alaric.us/wattos",
+  "homepage": "https://alaricus.github.io/wattos",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-router-dom": "^4.3.1",
@@ -17,6 +18,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
